--- a/css/full-slider.css
+++ b/css/full-slider.css
@@ -19,6 +19,24 @@ nav  {
   font-size: 150%;
 }
 
+.navbar-dark .navbar-nav .nav-link{
+  color: #292c2f;
+  font-weight: bold;
+
+  
+}
+
+.navbar-dark .navbar-nav .nav-link:hover{
+  background-color: #292c2f;
+  font-weight: bold;
+  color: white;
+  text-shadow: 8px 8px 8px #292c2f;
+}
+
+.navbar-toggler-icon{
+  background-color: #292c2f;
+}
+
 /*
 footer{
   background-color: #626D71;
